# django-auth-tkt

./: README.md  setup.cfg
django_auth_tkt/: __init__.py
