[metadata]
name = django-auth-tkt
version = attr: django_auth_tkt.__version__
author = dnknth
description = Django SSO authentication provider
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dnknth/django-auth-tkt
project_urls =
    Bug Tracker = https://github.com/dnknth/django-auth-tkt/issues
classifiers =
	Environment :: Web Environment
	Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = False
install_requires =
    setuptools
    auth-tkt ==0.3.*, >=0.3.1

[bdist_wheel]
universal = 1
